src/assets/styles/components.scss
table {
  border-spacing: 0;
  border-collapse: collapse;

  tr {
    border-bottom: 1px solid var(--border-base);
  }

  th {
    white-space: nowrap;
    border-top: 1px solid var(--border-base);
    font-weight: initial;

    .sort-icons {
      position: relative;
      margin-left: 4px;
      padding-right: 8px;

      @media (max-width: 767px) {
        padding-right: 6px;
      }

      i {
        color: var(--gs-bb);
        position: absolute;
        top: 50%;
        transform: translateY(-50%);
      }
    }

    &.desc,
    &.asc {
      color: var(--text-stress);
    }

    &.desc .fa-sort-down,
    &.asc .fa-sort-up {
      color: var(--gs-44);
    }
  }
}

.clickable-icon-wrapper {
  display: flex;
  align-items: center;
  justify-content: center;
  border-radius: 8px;
  cursor: pointer;

  &:hover {
    background: var(--background-light);

    i {
      color: var(--text-stress);
    }
  }
}

.table-stock {
  width: 100%;

  td,
  th {
    padding: 4px;
    text-align: right;

    &:nth-child(2) {
      text-align: left;
    }

    @media (max-width: 767px) {
      font-size: 12px;
    }
  }

  .price {
    color: var(--text-stress);
    white-space: nowrap;
  }

  .ticker {
    .symbol-code {
      i {
        margin-left: 8px;
        transition: none;

        &:hover {
          color: var(--price-up);
        }
      }
    }

    .stock-name {
      font-size: 12px;
    }
  }

  @media (max-width: 479px) {
    .vol-24h,
    .market-cap {
      letter-spacing: -0.8px;
    }
  }

  tr {
    cursor: pointer;

    &:hover {
      background: var(--background-light);
    }

    &.rising {
      .fluctuation {
        color: var(--price-up);
      }
    }

    &.falling {
      .fluctuation {
        color: var(--price-down);
      }
    }
  }
}

.image-remover {
  position: absolute;
  width: 40px;
  height: 40px;
  border-radius: 50%;
  top: 24px;
  right: 24px;
  background: rgba(0, 0, 0, 0.5);
  z-index: 1;
  cursor: pointer;

  .fa-times {
    color: var(--white);
  }

  &:hover {
    background: rgba(0, 0, 0, 0.75);
  }
}

.authorized-clickable-nickname {
  font-weight: 700;
  cursor: pointer;

  &:hover {
    text-decoration: underline;
  }
}

.badge-post-type {
  background: var(--border-base);
  padding: 2px 8px;
}

.recent-posts,
.table-posts,
.c-post {
  font-family: Gulim, sans-serif, 'IBM Plex Sans KR';
}

